added index.html main.js

--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!— The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags —>
     <link href="style.css" rel="stylesheet">
-    <title>Bootstrap 101 Template</title>
+    <title>Kruiger Family</title>
 
     <!— Bootstrap —>
 </head>
 
 <body>
+     <h1>Kruigers!</h1>
+    <div class="person"><h3 id='header'>Oma Kruiger</h3><img class="xyz" data-alt-src="img/Oma_alt.jpg" src="img/Oma.jpg"/></div>
+    <div class="person"><h3 id='header'>Opa Kruiger</h3><img class="xyz" data-alt-src="img/Opa_alt.jpg" src="img/Opa.jpg"/></div<
+    <div class="person"><h3 id='header'>Sasja Kruiger</h3><img class="xyz" data-alt-src="img/Sasja_alt.jpg" src="img/Sasja.jpg"/></div>
+    <div class="person"><h3 id='header'>Berend Kruiger</h3><img class="xyz" data-alt-src="img/Berend_alt.jpg" src="img/Berend.jpg"/></div>
+    <div class="person"><h3 id='header'>Johan Kruiger</h3><img class="xyz" data-alt-src="img/Johan_alt.jpg" src="img/Johan.jpg"/></div>
+    <div class="person"><h3 id='header'>Trudie Kruiger</h3><img class="xyz" data-alt-src="img/Trudie_alt.jpg" src="img/Trudie.jpg"/></div>
+    <div class="person"><h3 id='header'>Aviva Kruiger</h3><img class="xyz" data-alt-src="img/Aviva_alt.jpg"src="img/Aviva.jpg"/></div>
+    <div class="person"><h3 id='header'>Douglas Vrijberghe de Coningh</h3><img class="xyz" data-alt-src="img/Douglas_alt.jpg" src="img/Douglas.jpg"/></div>
+    <div class="person"><h3 id='header'>Han Kruiger</h3><img class="xyz" data-alt-src="img/Han_alt.jpg" src="img/Han.jpg"/></div>
+    <div class="person"><h3 id='header'>Ben Kruiger</h3><img class="xyz" data-alt-src="img/Ben_alt.jpg" src="img/Ben.jpg"/></div>
+    <div class="person"><h3 id='header'>Lily Kruiger</h3><img class="xyz" data-alt-src="img/Lily_alt.jpg" src="img/Lily.jpg"/></div>
+    <div class="person"><h3 id='header'>Tim Vrijberghe de Coningh</h3><img class="xyz" data-alt-src="img/Tim_alt.jpg" src="img/Tim.jpg"/></div>
+    <div class="person"><h3 id='header'>Karina Bijna Kruiger</h3><img class="xyz" data-alt-src="img/Karina_alt.jpg" src="img/Karina.jpg"/></div>
+    
 
-    <h1>Kruigers!</h1>
- 
-    <!— jQuery (necessary for Bootstrap's JavaScript plugins) —>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!— Include all compiled plugins (below), or include individual files as needed —>
+    <!— Include all compiled plugins (below), or include indiv class="person"idual files as needed —>
     <script src="main.js"></script>
 </body>
 
