--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <h1> header test</h1>
      <h1>Kruigers!</h1>
     <div class="person"><h3 id='header'>Oma Kruiger</h3><img class="xyz" data-alt-src="img/Oma_alt.jpg" src="img/Oma.jpg"/></div>
     <div class="person"><h3 id='header'>Opa Kruiger</h3><img class="xyz" data-alt-src="img/Opa_alt.jpg" src="img/Opa.jpg"/></div<
